--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a simple javascript date format function",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest -o"
   },
   "repository": {
     "type": "git",
