--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "mini-formater",
-  "version": "1.0.0",
-  "description": "a simple javascript date format function",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest -o"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/m-alghobary/mini-formater.git"
-  },
-  "keywords": [
-    "date",
-    "format"
-  ],
-  "author": "m_alghobary",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/m-alghobary/mini-formater/issues"
-  },
-  "homepage": "https://github.com/m-alghobary/mini-formater#readme",
-  "devDependencies": {
-    "jest": "^25.1.0",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
-  }
+    "name": "mini-formater",
+    "version": "1.0.0",
+    "description": "a simple javascript date format function",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest -o",
+        "build": "webpack --config webpack.config.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/m-alghobary/mini-formater.git"
+    },
+    "keywords": [
+        "date",
+        "format"
+    ],
+    "author": "m_alghobary",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/m-alghobary/mini-formater/issues"
+    },
+    "homepage": "https://github.com/m-alghobary/mini-formater#readme",
+    "devDependencies": {
+        "@babel/core": "^7.8.7",
+        "@babel/preset-env": "^7.8.7",
+        "babel-loader": "^8.0.6",
+        "jest": "^25.1.0",
+        "webpack": "^4.42.0",
+        "webpack-cli": "^3.3.11"
+    }
 }
