--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
         "jest": "^25.1.0",
         "webpack": "^4.42.0",
         "webpack-cli": "^3.3.11"
+    },
+    "dependencies": {
+        "minimist": "^1.2.5"
     }
 }
