--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "a simple javascript date format function",
     "main": "index.js",
     "scripts": {
-        "test": "jest -o",
-        "build": "webpack --config webpack.config.js"
+        "test": "jest -o"
     },
     "repository": {
         "type": "git",
@@ -22,14 +21,7 @@
     },
     "homepage": "https://github.com/m-alghobary/mini-formater#readme",
     "devDependencies": {
-        "@babel/core": "^7.8.7",
-        "@babel/preset-env": "^7.8.7",
-        "babel-loader": "^8.0.6",
-        "jest": "^25.1.0",
-        "webpack": "^4.42.0",
-        "webpack-cli": "^3.3.11"
+        "jest": "^25.1.0"
     },
-    "dependencies": {
-        "minimist": "^1.2.5"
-    }
+    "dependencies": {}
 }
